--- a/craft-kvass/package.json
+++ b/craft-kvass/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "web2021",
+  "name": "craft-kvass",
   "version": "1.0.0",
-  "description": "web2021 uber",
+  "description": "craft-kvass",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "LDA",
+  "author": "MiLan",
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.27.7",
